# kedro-astro

./: .gitignore  README.md  conda-lock.yml  environment.yml  pyproject.toml
conf/base/: catalog.yml  logging.yml
docs/source/: conf.py  index.rst
notebooks/: testing.ipynb
src/kedro_astro/: __init__.py  __main__.py  settings.py
src/kedro_astro/extras/datasets/: astropy_dataset.py  sunpy_dataset.py
src/tests/: test_run.py
